--- a/Coursera Home Work.ipynb
+++ b/Coursera Home Work.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a0928b0e",
+   "id": "8a9f5f8b",
    "metadata": {},
    "source": [
     "Coursera Home Work"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8437d239",
+   "id": "170bce6c",
    "metadata": {},
    "source": [
     "This markdown cell is for introduction"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40bdb087",
+   "id": "ad850574",
    "metadata": {},
    "source": [
     "Data Science Lnaguages:\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90b9063d",
+   "id": "9c30ff46",
    "metadata": {},
    "source": [
     "Data Science Libraries:\n",
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30c90969",
+   "id": "487db40a",
    "metadata": {},
    "source": [
     "| Tool                | Description                                                                                   |\n",
@@ -86,9 +86,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a890e2a2",
+   "metadata": {},
+   "source": [
+    "Introductory Arithmetic"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "01338900",
+   "id": "679723a3",
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "65767760",
+   "id": "95dc7bc9",
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b9a1a58",
+   "id": "0c4489f7",
    "metadata": {},
    "source": [
     "List of objectives:\n",
@@ -149,7 +157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "afee8f3b",
+   "id": "6ee4d0a3",
    "metadata": {},
    "source": [
     "Nikhil Kumar Chaudhary"
